tests/Rules/Anchor/Fixtures/valid/link_with_title.html.twig
<html>
  <body>
    <a href="/foo" title="Home page"></a>
  </body>
</html>
