tests/Rules/Anchor/Fixtures/invalid/link_with_empty_title.html.twig
{# 1 errors #}
<html>
  <body>
    <a href="/foo" title=""></a>
  </body>
</html>
